membuat header beserta aset-asetnya

--- a/index.html
+++ b/index.html
@@ -10,11 +10,44 @@
     <!-- link font-google -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <!-- link css -->
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    hello world
-    <h2>Learning Code</h2>
-    <h3>P</h3>
+     <!-- HEADER -->
+     <header>
+        <div class="container">
+            <div class="logo">
+                <img src="img/download 1.png" alt="">
+            </div>
+            <a href="#" class="menu-icon"><span class="fa fa-bars"></span></a>
+            <div class="navigasi">
+                <nav>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Temukan Mentor</a></li>
+                        <li><a href="#">Komunitas</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="profile">
+                <div class="profile-element">
+                    <p>Halo, User</p>
+                    <img src="img/Ellipse 1.png" alt="">
+                    <div class="dropdown">
+                        <button class="dropbtn"><i class="fa-solid fa-angle-down"></i></button>
+                        <div class="dropdown-content">
+                            <a href="#">
+                                <i class="fa-regular fa-user"></i> Account
+                            </a>
+                            <a href="#">
+                                <i class="fa-solid fa-arrow-right-from-bracket"></i> Logout
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!-- END HEADER -->
 </body>
 </html>
