--- a/index.html
+++ b/index.html
@@ -52,6 +52,54 @@
     </header>
     <!-- END HEADER -->
 
+    <!-- Field-3 [Fernando] Start -->
+    <div class="mentor">
+        <div class="container">
+            <div class="judul">
+                <h1>Akses Mentor Pribadimu Jadi Lebih Mudah</h1>
+            </div>
+            <div class="cardd">
+             <div class="card">
+                 <div class="card-title">
+                     <h2>Cari mentor untukmu</h2>
+                 </div>
+                     <div class="card-body">
+                         <img src="img/cari_mentor.png" alt="">
+                         <p>Jelajahi katalog mentor berpengalaman 
+                          kami yang terus berkembang hingga 
+                          Anda menemukan yang paling cocok.</p>
+                     </div>
+             </div>
+             <div class="card">
+                 <div class="card-title">
+                     <h2>Pilih Mentormu</h2>
+                 </div>
+                     <div class="card-body">
+                         <img src="img/pilih_mentor.png" alt="">
+                         <p>Isi form dalam aplikasi, dan jika Anda
+                             cocok dengan mentor pilihan, 
+                             Anda bisa langsung memulai 
+                             program mentorship</p>
+                     </div>
+             </div>
+             <div class="card">
+                 <div class="card-title">
+                     <h2>Tingkatkan skillmu</h2>
+                 </div>
+                     <div class="card-body">
+                         <img src="img/tingkatkan_skill.png" alt="">
+                         <p>Dari obrolan pribadi hingga dukungan
+                             langsung, setiap mentor menawarkan 
+                             layanan berbeda untuk membantu 
+                             Anda meroketkan karier.</p>
+                     </div>
+             </div>
+            </div>
+        </div>
+    </div>
+    <!-- Field-3 [Fernando] End -->
+
+
     <!-- FIELD-4 [HILMAN] START! -->
     <div class="field4">
         <div class="container-field4">
