menambahkan fav icon di header dan font-family di body

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <!-- link css -->
     <link rel="stylesheet" href="style.css">
+    <!-- fav-icon -->
+    <link rel="icon" href="https://prog-8.com/assets/favicons/light-theme/favicon-production-f844944a94cb1609501bd9075d970df2291fda966574f91630f4c17fa88fd7a7.png">
 </head>
 <body>
      <!-- HEADER -->
