menambah field 4 hilman

--- a/index.html
+++ b/index.html
@@ -51,5 +51,27 @@
         </div>
     </header>
     <!-- END HEADER -->
+
+    <!-- FIELD-4 [HILMAN] START! -->
+    <div class="field4">
+        <div class="container-field4">
+            <div class="img-field4">
+                <img src="" alt="">
+            </div>
+            <div class="text-field4">
+                <h4>Belajar bersama kami!
+                    metode belajar lebih terarah dan seru</h4>
+                <p>Mentor Anda akan menawarkan bimbingan di mana 
+                    mereka melihat peluang, dan bahkan mendorong 
+                    Anda untuk melakukan hal-hal luar biasa yang mungkin 
+                    Anda pikir tidak bisa Anda lakukan. Baik itu beralih karier 
+                    atau sekadar mempersiapkan proyek pribadi, mentor kami 
+                    seperti memiliki mitra akuntabilitas di saku Anda.</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- FIELD-4 [HILMAN] END! -->
+    
 </body>
 </html>
