--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                     atau sekadar mempersiapkan proyek pribadi, mentor kami 
                     seperti memiliki mitra akuntabilitas di saku Anda.</p>
             </div>
+            <span class="btn temukan">Temukan Tentor</span>
         </div>
     </div>
 
