membuat section FAQ dan memperbaiki responsive header

--- a/index.html
+++ b/index.html
@@ -71,8 +71,65 @@
             <span class="btn temukan">Temukan Tentor</span>
         </div>
     </div>
-
     <!-- FIELD-4 [HILMAN] END! -->
+
+    <!-- FAQ -->
+    <section class="faq">
+        <div class="container">
+            <div class="text-top">
+                <h1>Prograte Mentorship</h1>
+                <p>Kami membangun Prograte Mentorship karena kami tahu bahwa bimbingan yang sukses 
+                dapat benar-benar mengubah hidup – bagi kedua belah pihak. Satu-satunya masalah? 
+                Bimbingan saat ini sering terkunci di balik kursus MOOC, bootcamp, dan program video tanpa akhir, 
+                sama sekali melewatkan hal terpenting: interaksi 1 on 1.</p>
+            </div>
+            <div class="accordion">
+                <div class="accordion-item" id="question1">
+                    <a href="#question1" class="accordion-link">
+                        Siapa saja mentornya?
+                        <i class="fa-solid fa-angle-down"></i>
+                        <i class="fa-solid fa-angle-up"></i>
+                    </a>
+                    <div class="answer">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae ut pariatur aliquid commodi aut saepe veritatis, illum praesentium repudiandae dignissimos.
+                        </p>
+                    </div>
+                </div>
+                <div class="accordion-item" id="question2">
+                    <a href="#question2" class="accordion-link">
+                        Apa yang dimaksud dengan layanan mentor?
+                        <i class="fa-solid fa-angle-down"></i>
+                        <i class="fa-solid fa-angle-up"></i>
+                    </a>
+                    <div class="answer">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae ut pariatur aliquid commodi aut saepe veritatis, illum praesentium repudiandae dignissimos.</p>
+                    </div>
+                </div>
+                <div class="accordion-item" id="question3">
+                    <a href="#question3" class="accordion-link">
+                        Metode pembayaran apa yang dapat Saya gunakan?
+                        <i class="fa-solid fa-angle-down"></i>
+                        <i class="fa-solid fa-angle-up"></i>
+                    </a>
+                    <div class="answer">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae ut pariatur aliquid commodi aut saepe veritatis, illum praesentium repudiandae dignissimos.</p>
+                    </div>
+                </div>
+                <div class="accordion-item" id="question4">
+                    <a href="#question4" class="accordion-link">
+                        Berapa lama mentoring harus dilakukan?
+                        <i class="fa-solid fa-angle-down"></i>
+                        <i class="fa-solid fa-angle-up"></i>
+                    </a>
+                    <div class="answer">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae ut pariatur aliquid commodi aut saepe veritatis, illum praesentium repudiandae dignissimos.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- END FAQ -->
     
 </body>
 </html>
