menambahkan layout footer

--- a/index.html
+++ b/index.html
@@ -178,6 +178,40 @@
         </div>
     </section>
     <!-- END FAQ -->
+
+    <!-- Footer [Fahri Nurrahman] -->
+    <footer>
+        <div class="flex-container">
+            <div class="footer-left">
+                <img class="footer-logo" src="https://prog-8.com/assets/packs/dist/images/typo_logo-b40bf595603dc0e63a5c..svg" alt="">
+                <p>Belajar bimbingan dengan 1 on 1. Ambil sertifikasi serta kesempatan kerja di berbagai perusahaan.</p>
+            </div>
+            <div class="footer-center">
+                <div class="footer-heading">
+                    <h3>Progate</h3>
+                </div>
+                <div class="footer-center-list">
+                    <ul>
+                        <li><a href="#">Karir</a></li>
+                        <li><a href="#">Tentang Kami</a></li>
+                        <li><a href="#">Komunitas</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-right">
+                <div class="footer-heading">
+                    <h3>Kantor</h3>
+                </div>
+                <p>JL. Pangeran Antasari No. 147 B, Banjarmasin</p>
+                <p>(021) 7884 6534</p>
+                <p>skilvul@gmail.com</p>
+            </div> 
+            <div class="footer-copyright">
+                <p>© 2021. All Rights Reserved</p>
+            </div>
+        </div>
+    </footer>
+    <!-- End-Footer [Fahri Nurrahman] -->
     
 </body>
 </html>
