benerin field 4 dikit

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <div class="field4">
         <div class="container-field4">
             <div class="img-field4">
-                <img src="" alt="">
+                <img src="img/tingkatkan_skill.png" alt="">
             </div>
             <div class="text-field4">
                 <h4>Belajar bersama kami!
