--- a/index.html
+++ b/index.html
@@ -103,18 +103,20 @@
     <!-- FIELD-4 [HILMAN] START! -->
     <div class="field4">
         <div class="container-field4">
-            <div class="img-field4">
-                <img src="img/tingkatkan_skill.png" alt="">
+            <div>
+                <img class="gambar-tentor"src="img/temukan_tentor.png" alt="">
             </div>
             <div class="text-field4">
                 <h4>Belajar bersama kami!
-                    metode belajar lebih terarah dan seru</h4>
+                    metode belajar lebih terarah dan seru
+                </h4>
                 <p>Mentor Anda akan menawarkan bimbingan di mana 
                     mereka melihat peluang, dan bahkan mendorong 
                     Anda untuk melakukan hal-hal luar biasa yang mungkin 
                     Anda pikir tidak bisa Anda lakukan. Baik itu beralih karier 
                     atau sekadar mempersiapkan proyek pribadi, mentor kami 
-                    seperti memiliki mitra akuntabilitas di saku Anda.</p>
+                    seperti memiliki mitra akuntabilitas di saku Anda.
+                </p>
             </div>
             <span class="btn temukan">Temukan Tentor</span>
         </div>
