--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
 
     <!-- FIELD-4 [HILMAN] START! -->
     <div class="field4">
-        <div class="container-field4">
-            <div>
+        <div class="container">
+            <div class="img-field4">
                 <img class="gambar-tentor"src="img/temukan_tentor.png" alt="">
             </div>
             <div class="text-field4">
@@ -118,7 +118,7 @@
                     seperti memiliki mitra akuntabilitas di saku Anda.
                 </p>
             </div>
-            <span class="btn temukan">Temukan Tentor</span>
+            <!-- <span class="btn temukan">Temukan Tentor</span> -->
         </div>
     </div>
     <!-- FIELD-4 [HILMAN] END! -->
