--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     seperti memiliki mitra akuntabilitas di saku Anda.
                 </p>
             </div>
-            <!-- <span class="btn temukan">Temukan Tentor</span> -->
+            <span class="btn temukan">Temukan Tentor</span>
         </div>
     </div>
     <!-- FIELD-4 [HILMAN] END! -->
