menambah css hover pada footer

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 </div>
                 <p>JL. Pangeran Antasari No. 147 B, Banjarmasin</p>
                 <p>(021) 7884 6534</p>
-                <p>skilvul@gmail.com</p>
+                <p><a href="#">progate@gmail.com</a></p>
             </div> 
             <div class="footer-copyright">
                 <p>© 2021. All Rights Reserved</p>
