membuat section hero

--- a/index.html
+++ b/index.html
@@ -52,6 +52,22 @@
     </header>
     <!-- END HEADER -->
 
+    <div id="hero">
+        <div class="hero-text">
+            <h1>Pilih mentor yang kamu sukai <br>
+                dan kembangkan skillmu!</h1>
+            <p>Bekerja dengan mentor teknologi terkemuka dan dapatkan akses ke panduan yang dipersonalisasi <br>  untuk mencapai potensi Anda. Sesi yang sedang berlangsung dan saran ahli, sesuai keinginan Anda.</p>
+        </div>
+        <div class="hero-search">
+            <div class="input-search">
+                <div>
+                    <i class="fa fa-search"></i>
+                </div>
+                <input type="text">
+            </div>
+        </div>
+    </div>
+
     <!-- Field-3 [Fernando] Start -->
     <div class="mentor">
         <div class="container">
