membuat style section hero

--- a/index.html
+++ b/index.html
@@ -53,17 +53,103 @@
     <!-- END HEADER -->
 
     <div id="hero">
-        <div class="hero-text">
-            <h1>Pilih mentor yang kamu sukai <br>
-                dan kembangkan skillmu!</h1>
-            <p>Bekerja dengan mentor teknologi terkemuka dan dapatkan akses ke panduan yang dipersonalisasi <br>  untuk mencapai potensi Anda. Sesi yang sedang berlangsung dan saran ahli, sesuai keinginan Anda.</p>
-        </div>
-        <div class="hero-search">
-            <div class="input-search">
-                <div>
-                    <i class="fa fa-search"></i>
+        <div class="container">
+            <div class="hero-text">
+                <h1>Pilih mentor yang kamu sukai
+                    dan kembangkan skillmu!</h1>
+                <p>Bekerja dengan mentor teknologi terkemuka dan dapatkan akses ke panduan yang dipersonalisasi untuk mencapai potensi Anda. Sesi yang sedang berlangsung dan saran ahli, sesuai keinginan Anda.</p>
+            </div>
+            <div class="hero-search">
+                <div class="input-search">
+                    <div class="input-search-icon">
+                        <i class="fa fa-search"></i>
+                    </div>
+                    <input type="text">
                 </div>
-                <input type="text">
+            </div>
+            <div class="mentor-summary">
+                <div class="mentor-list">
+                    <div class="mentor-card">
+                        <div class="mentor-img">
+                            <img src="img/mentor1.png" alt="gambar-mentor">
+                        </div>
+                        <div class="mentor-desc">
+                            <p class="mentor-name">Alicia</p>
+                            <p class="mentor-job">Web Designer</p>
+                            <button class="btn-primary btn-block">View Profile</button>
+                        </div>
+                    </div>
+                    <div class="mentor-card">
+                        <div class="mentor-img">
+                            <img src="img/mentor1.png" alt="gambar-mentor">
+                        </div>
+                        <div class="mentor-desc">
+                            <p class="mentor-name">Alicia</p>
+                            <p class="mentor-job">Web Designer</p>
+                            <button class="btn-primary btn-block">View Profile</button>
+                        </div>
+                    </div>
+                    <div class="mentor-card">
+                        <div class="mentor-img">
+                            <img src="img/mentor1.png" alt="gambar-mentor">
+                        </div>
+                        <div class="mentor-desc">
+                            <p class="mentor-name">Alicia</p>
+                            <p class="mentor-job">Web Designer</p>
+                            <button class="btn-primary btn-block">View Profile</button>
+                        </div>
+                    </div>
+                    <div class="mentor-card">
+                        <div class="mentor-img">
+                            <img src="img/mentor1.png" alt="gambar-mentor">
+                        </div>
+                        <div class="mentor-desc">
+                            <p class="mentor-name">Alicia</p>
+                            <p class="mentor-job">Web Designer</p>
+                            <button class="btn-primary btn-block">View Profile</button>
+                        </div>
+                    </div>
+                    <div class="mentor-card">
+                        <div class="mentor-img">
+                            <img src="img/mentor1.png" alt="gambar-mentor">
+                        </div>
+                        <div class="mentor-desc">
+                            <p class="mentor-name">Alicia</p>
+                            <p class="mentor-job">Web Designer</p>
+                            <button class="btn-primary btn-block">View Profile</button>
+                        </div>
+                    </div>
+                    <div class="mentor-card">
+                        <div class="mentor-img">
+                            <img src="img/mentor1.png" alt="gambar-mentor">
+                        </div>
+                        <div class="mentor-desc">
+                            <p class="mentor-name">Alicia</p>
+                            <p class="mentor-job">Web Designer</p>
+                            <button class="btn-primary btn-block">View Profile</button>
+                        </div>
+                    </div>
+                    <div class="mentor-card">
+                        <div class="mentor-img">
+                            <img src="img/mentor1.png" alt="gambar-mentor">
+                        </div>
+                        <div class="mentor-desc">
+                            <p class="mentor-name">Alicia</p>
+                            <p class="mentor-job">Web Designer</p>
+                            <button class="btn-primary btn-block">View Profile</button>
+                        </div>
+                    </div>
+                    <div class="mentor-card">
+                        <div class="mentor-img">
+                            <img src="img/mentor1.png" alt="gambar-mentor">
+                        </div>
+                        <div class="mentor-desc">
+                            <p class="mentor-name">Alicia</p>
+                            <p class="mentor-job">Web Designer</p>
+                            <button class="btn-primary btn-block">View Profile</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
