--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     </header>
     <!-- END HEADER -->
 
+    <!-- START HERO -->
     <div id="hero">
         <div class="container">
             <div class="hero-text">
@@ -153,6 +154,7 @@
             </div>
         </div>
     </div>
+    <!-- END HERO -->
 
     <!-- Field-3 [Fernando] Start -->
     <div class="mentor">
